--- a/network/css/style.css
+++ b/network/css/style.css
@@ -425,7 +425,7 @@ background-position: -51px -122px;
 
 #mainpanel .colours {
 
-background-image:url('../images/rainbow.png');
+image:url('../images/rainbow.png');
 
 }
 #legend .note {
