--- a/network/css/style.css
+++ b/network/css/style.css
@@ -426,6 +426,8 @@ background-position: -51px -122px;
 #mainpanel .colours {
 
 image:url('../images/rainbow.png');
+width: 100px;
+height: auto
 
 }
 #legend .note {
